fix: layout shift in icons

--- a/src/components/sections/Skills/SkillItem.module.scss
+++ b/src/components/sections/Skills/SkillItem.module.scss
@@ -33,3 +33,9 @@
     color: #333;
   }
 }
+
+.icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+}
